--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,17 +1,17 @@
 site_name: MkDocsWorkTest
 site_url:
-site_description: Тестовый репозиторий для отработки гипотезы: "Средствами статического генератора сайтов MkDocs мы можем закрыть все наши потребности по части разработки и поддержки пользовательской документации проекта".
+site_description: Тестовый репозиторий для отработки гипотезы.
 site_author: Frolov Aleksey
 repo_url: https://github.com/daymonri/MkDocsWorkTest.git
 theme: material
 copyright: Copyright &copy; 2025
 
 nav:
-  - Разделы:
-    - Рабочие группы: \Razdeli\Rabocie-gruppi-root.md
-  - Инструкции:
-  - Глоссарий:
-  - Release Notes:
+    - Разделы:
+        - Рабочие группы: Rabocie-gruppi-root.md
+    - Инструкции: test-file.md
+    - Глоссарий: test-file.md
+    - Release Notes: test-file.md
 
 markdown_extensions:
   - pymdownx.highlight:
