--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ theme: material
 
 nav:
     - Разделы системы:
-        - Рабочие группы: docs\Sections\Working-groups\Working-groups-root.md
+        - Рабочие группы: Sections\Working-groups\Working-groups-root.md
     - Инструкции: test-file-1.md
     - Глоссарий: test-file-2.md
     - Что нового: test-file-3.md
