--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,8 +8,8 @@ theme: material
 
 nav:
     - Разделы системы:
-        - Рабочие группы: docs/Sections/Working-groups/Working-groups-root.md
-    - Инструкции: test-file-1.md
+        - Рабочие группы: docs\Sections\Working-groups\Working-groups-root.md
+    - Инструкции: docs\Sections\Working-groups\Working-groups-root.md
     - Глоссарий: test-file-2.md
     - Что нового: test-file-3.md
 
