--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Руководство пользователя
+site_name: Руководство пользователя XPlan
 site_description: Тестовый сайт для отработки гипотезы.
 
 theme:
@@ -16,7 +16,7 @@ theme:
       accent: 'indigo'
       toggle:
         icon: material/brightness-7
-        name: Переключиться на темную тему
+        name: Переключиться на тёмную тему
     - scheme: slate # Темная тема
       primary: 'indigo'
       accent: 'indigo'
@@ -38,20 +38,6 @@ markdown_extensions:
   - pymdownx.superfences # Вложенные блоки кода
   - pymdownx.tabbed: # Табы
       alternate_style: true
-
-markdown_extensions: # Подсветка синтаксиса
-  - pymdownx.highlight:
-      anchor_linenums: true
-      line_spans: __span
-      pygments_lang_class: true
-  - pymdownx.inlinehilite
-  - pymdownx.snippets
-  - pymdownx.superfences
-
-markdown_extensions: # Для выравнивания изображений
-  - attr_list
-  - md_in_html
-  - pymdownx.blocks.caption
 
 markdown_extensions: # Заголовок блока "Содержание"
   - toc:
