--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ theme:
         name: Переключиться на светлую тему
 
 nav:
-    - Разделы XPlan: test-file-4-1.md
+    - Разделы XPlan:
       # - Персональные данные: test-file-4-1.md
       # - Рабочие группы: test-file-4-2.md
     - Инструкции: test-file-1.md
