--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,7 @@ theme:
 nav:
   - Разделы XPlan:
     - Персональные данные: test-file-4-1.md
-    - Рабочие группы: docs\Sections\test-file-4-3.md
+    - Рабочие группы: test-file-4-2.md
   - Инструкции: test-file-1.md
   - Глоссарий: test-file-2.md
   - Что нового: test-file-3.md
