--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,8 +29,8 @@ theme:
 
 nav:
   - Разделы XPlan:
-    Раздел "Персональные данные": test-file-4-1.md
-    Раздел "Рабочие группы": test-file-4-2.md
+    - Раздел "Персональные данные": test-file-4-1.md
+    - Раздел "Рабочие группы": test-file-4-2.md
   - Инструкции: test-file-1.md
   - Глоссарий: test-file-2.md
   - Что нового: test-file-3.md
