--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,3 +55,6 @@ markdown_extensions: # Выравнивание изображений
 markdown_extensions: # Заголовок блока "Содержание" на русском
   - toc:
       title: Содержание
+
+plugins:
+  - include-markdown
