--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ theme: # Конфигурация используемой темы
 
 nav: # Структура сайта
   - Разделы XPlan:
-    - Раздел "Персональные данные": Personal-data-adm.md
+    - Раздел "Персональные данные": Sections/Personal-data/Personal-data-adm.md
     - Раздел "Рабочие группы": test-file-4-2.md
   - Инструкции: test-file-1.md
   - Глоссарий: test-file-2.md
