--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,10 +41,12 @@ markdown_extensions:
         - name: any
           class: any
           format: !!python/name:pymdownx.superfences.fence_div_format
+  - attr_list  # для кастомизации
+  - pymdownx.emoji  # если используете emoji
+  - pymdownx.snippets  # если используете вставки
 
-#  - attr_list  # для кастомизации
-#  - pymdownx.emoji  # если используете emoji
-#  - pymdownx.snippets  # если используете вставки
+extra_css:
+  - stylesheets/extra.css
 
 markdown_extensions: # Подсветка синтаксиса в блоках кода
   - pymdownx.highlight:
