--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ theme: # Конфигурация используемой темы
   features:
     - navigation.tabs # Навигация в виде табов
     - navigation.sections # Секции в навигации
+    - navigation.top
     # - search.suggest # Подсказки при поиске
     # - content.code.copy # Кнопка "копировать" для блоков кода
 
@@ -35,18 +36,7 @@ nav: # Структура сайта
 markdown_extensions:
   - admonition  # базовые выноски
   - pymdownx.details  # расширенные выноски
-  - pymdownx.superfences:  # подсветка кода
-      custom_fences:
-        - name: mermaid
-          class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_code_format
-        - name: wrap
-          class: wrap
-          format: !!python/name:pymdownx.superfences.fence_div_format
-  - pymdownx.highlight
-  - attr_list  # для кастомизации
-  - pymdownx.emoji  # если используете emoji
-  - pymdownx.snippets  # если используете вставки
+  - pymdownx.superfences
 
 markdown_extensions: # Подсветка синтаксиса в блоках кода
   - pymdownx.highlight:
@@ -66,8 +56,8 @@ markdown_extensions: # Заголовок блока "Содержание" на
   - toc:
       title: Содержание
 
-plugins:
+plugins: # Плагины
   - search
 
-extra_css:
+extra_css: # Переносы в выносках
   - stylesheets/extra.css
