--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ theme: # Конфигурация используемой темы
   features:
     - navigation.tabs # Навигация в виде табов
     - navigation.sections # Секции в навигации
-    - navigation.top
+    - navigation.top # Кнопка "К началу"
     # - search.suggest # Подсказки при поиске
     # - content.code.copy # Кнопка "копировать" для блоков кода
 
@@ -58,6 +58,7 @@ markdown_extensions: # Заголовок блока "Содержание" на
 
 plugins: # Плагины
   - search
-
+  - external-markdown
+  
 extra_css: # Переносы в выносках
   - stylesheets/extra.css
