--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,18 +12,9 @@ theme: # Конфигурация используемой темы
     # - content.code.copy # Кнопка "копировать" для блоков кода
   icon:
     admonition:
-      note: octicons/tag-16
-      abstract: octicons/checklist-16
-      info: octicons/info-16
-      tip: octicons/squirrel-16
-      success: octicons/check-16
-      question: octicons/question-16
-      warning: octicons/alert-16
-      failure: octicons/x-circle-16
-      danger: octicons/zap-16
-      bug: octicons/bug-16
-      example: octicons/beaker-16
-      quote: octicons/quote-16
+      note: material/comment-alert
+      warning: material/alert
+
 
   palette: # Визуальное оформление
     - scheme: default # Светлая тема
@@ -74,6 +65,6 @@ plugins:
   - search
   - external-markdown
   - include-markdown
-  
+
 extra_css: # Переносы в выносках
   - stylesheets/extra.css
