--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,4 +63,14 @@ markdown_extensions: # Заголовок блока "Содержание" на
 plugins:
   - search
   - external-markdown
-  - include-markdown
+  - include-markdown:
+      encoding: ascii
+      preserve_includer_indent: false
+      dedent: false
+      trailing_newlines: true
+      comments: true
+      rewrite_relative_urls: true
+      heading_offset: 0
+      start: <!--start-->
+      end: <!--end-->
+      recursive: true
